--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     .home {
       background:
         linear-gradient(rgba(2,6,23,0.75), rgba(2,6,23,0.9)),
-        url('https://drive.google.com/file/d/1_lGEXAljhVwGKAASVb6FvsI-kBsAZRlR/view?usp=sharing') center/cover no-repeat;
+        url('profile.png') center/cover no-repeat;
       flex-direction: column;
       justify-content: center;
     }
