--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   <!-- CONTACT -->
   <section id="contact" class="panel content">
     <h2>Contact</h2>
-    <p style="color:var(--muted);">Email: your.email@example.com<br/>LinkedIn | GitHub</p>
+    <p style="color:var(--muted);">Email: suresh613d@gmail.com<br/>LinkedIn: www.linkedin.com/in/suresh6303 | GitHub</p>
   </section>
 
 </div>
