--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Suresh Babu Danaboina | IT Dashboard Portfolio</title>
+<title>Suresh Babu | Application Security Intern Portfolio</title>
 
 <style>
+/* =====================
+   GLOBAL THEME (PRO)
+===================== */
 :root {
-  --bg-dark: #020617;
-  --panel: #0f172a;
+  --bg-main: #020617;
+  --bg-panel: #0b1224;
+  --bg-soft: #0f172a;
   --accent: #ef4444;
-  --text: #e5e7eb;
-  --muted: #94a3b8;
+  --accent-soft: #f87171;
+  --text-main: #e5e7eb;
+  --text-muted: #94a3b8;
+  --border-soft: rgba(255,255,255,0.08);
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: var(--bg-dark);
-  color: var(--text);
+  font-family: 'Inter', 'Segoe UI', system-ui, sans-serif;
+  background: linear-gradient(180deg, #020617 0%, #030a1a 100%);
+  color: var(--text-main);
   height: 100vh;
   overflow: hidden;
 }
 
-/* HEADER */
+/* =====================
+   HEADER / NAV
+===================== */
 header {
-  height: 70px;
-  background: rgba(2,6,23,0.7);
-  backdrop-filter: blur(10px);
+  height: 72px;
+  background: rgba(2,6,23,0.75);
+  backdrop-filter: blur(14px);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -36,11 +44,13 @@ header {
   position: fixed;
   width: 100%;
   z-index: 100;
+  border-bottom: 1px solid var(--border-soft);
 }
 
 .brand {
-  font-size: 1.4rem;
+  font-size: 1.35rem;
   font-weight: 700;
+  letter-spacing: 0.5px;
 }
 
 nav {
@@ -49,84 +59,107 @@ nav {
 }
 
 nav a {
-  color: var(--text);
+  color: var(--text-main);
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 0.95rem;
   cursor: pointer;
   position: relative;
 }
 
-nav a.active::after,
-nav a:hover::after {
+nav a::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -6px;
-  width: 100%;
+  bottom: -8px;
+  width: 0;
   height: 2px;
   background: var(--accent);
+  transition: width 0.3s ease;
 }
 
-/* DASHBOARD */
+nav a.active::after,
+nav a:hover::after {
+  width: 100%;
+}
+
+/* =====================
+   LAYOUT
+===================== */
 .dashboard {
   height: 100vh;
-  padding-top: 70px;
+  padding-top: 72px;
 }
 
 .panel {
   display: none;
-  height: calc(100vh - 70px);
-  padding: 4% 6%;
+  height: calc(100vh - 72px);
+  padding: 4% 7%;
   overflow-y: auto;
+  opacity: 0;
+  transition: opacity 0.35s ease;
 }
 
 .panel.active {
   display: flex;
   flex-direction: column;
+  opacity: 1;
 }
 
-/* HOME */
+/* =====================
+   HOME
+===================== */
 .home {
-  background:
-    linear-gradient(rgba(2,6,23,0.75), rgba(2,6,23,0.9)),
-    url('profile.png') center/cover no-repeat;
   justify-content: center;
+  background:
+    radial-gradient(circle at 20% 20%, rgba(239,68,68,0.08), transparent 40%),
+    radial-gradient(circle at 80% 30%, rgba(248,113,113,0.06), transparent 40%);
 }
 
 .home h1 {
-  font-size: 3.6rem;
-  margin-bottom: 1rem;
+  font-size: 3.2rem;
+  font-weight: 800;
+  margin-bottom: 1.2rem;
 }
 
-.home h1 span { color: var(--accent); }
+.home h1 span {
+  color: var(--accent);
+}
 
 .home p {
-  max-width: 700px;
-  font-size: 1.15rem;
-  line-height: 1.7;
-  color: #cbd5f5;
-  margin-bottom: 2rem;
+  max-width: 760px;
+  font-size: 1.1rem;
+  line-height: 1.75;
+  color: #c7d2fe;
+  margin-bottom: 2.4rem;
 }
 
 .cta a {
   display: inline-block;
   margin-right: 1rem;
-  padding: 0.9rem 2.2rem;
-  border-radius: 30px;
+  padding: 0.85rem 2.2rem;
+  border-radius: 10px;
   text-decoration: none;
   font-weight: 600;
+  font-size: 0.95rem;
 }
 
-.primary { background: var(--accent); color: white; }
-.outline { border: 2px solid white; color: white; cursor:pointer; }
-
-/* CONTENT */
-.content {
-  justify-content: center;
+.primary {
+  background: var(--accent);
+  color: #fff;
 }
 
+.outline {
+  border: 1.5px solid var(--accent-soft);
+  color: var(--accent-soft);
+}
+
+/* =====================
+   COMMON CONTENT
+===================== */
 .content h2 {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
+  font-weight: 700;
   margin-bottom: 2rem;
 }
 
@@ -137,45 +170,71 @@ nav a:hover::after {
 }
 
 .card {
-  background: var(--panel);
+  background: linear-gradient(180deg, var(--bg-panel), var(--bg-soft));
   padding: 2rem;
-  border-radius: 16px;
-  border: 1px solid rgba(255,255,255,0.08);
+  border-radius: 18px;
+  border: 1px solid var(--border-soft);
 }
 
 .card.clickable {
   cursor: pointer;
-  transition: transform 0.2s ease;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
 }
 
 .card.clickable:hover {
   transform: translateY(-6px);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.35);
 }
 
-/* LISTS */
-ul { margin-left: 1.2rem; }
-li { margin-bottom: 0.6rem; }
+ul { margin-left: 1.1rem; }
+li { margin-bottom: 0.55rem; }
 
-.section {
-  margin-top: 2rem;
+/* =====================
+   MODAL
+===================== */
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.75);
+  backdrop-filter: blur(8px);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
 }
 
+.modal-content {
+  background: linear-gradient(180deg, var(--bg-panel), var(--bg-soft));
+  padding: 2.2rem;
+  border-radius: 20px;
+  max-width: 820px;
+  width: 92%;
+  border: 1px solid var(--border-soft);
+}
+
+.close {
+  float: right;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+/* =====================
+   RESPONSIVE
+===================== */
 @media (max-width: 768px) {
-  nav { gap: 1rem; }
-  .home h1 { font-size: 2.4rem; }
+  .home h1 { font-size: 2.2rem; }
+  nav { gap: 1.2rem; }
 }
 </style>
 </head>
-
 <body>
-
 <header>
   <div class="brand">Suresh.</div>
   <nav>
     <a class="active" onclick="showPanel('home')">Home</a>
     <a onclick="showPanel('about')">About</a>
     <a onclick="showPanel('skills')">Skills</a>
-    <a onclick="showPanel('experience')">Experience</a>
+    <a onclick="showPanel('labs')">Labs</a>
     <a onclick="showPanel('projects')">Projects</a>
     <a onclick="showPanel('contact')">Contact</a>
   </nav>
@@ -185,50 +244,105 @@ li { margin-bottom: 0.6rem; }
 
 <!-- HOME -->
 <section id="home" class="panel home active">
-  <h1>Hello, I’m <span>Suresh Babu</span></h1>
+  <h1>Hello, I'm <span>Suresh Babu</span></h1>
   <p>
-    Master’s Graduate and IT Professional with strong foundations in software development,
-    system analysis, application security, and cloud fundamentals.
+    Application Security aspirant with a strong academic foundation and a focused interest in securing
+    modern web and API-based applications. Actively learning industry-relevant AppSec practices and
+    preparing for a career in cybersecurity consulting.
   </p>
   <div class="cta">
-    <a class="primary">Download Resume</a>
-    <a onclick="showPanel('projects')" class="outline">View Projects</a>
+    <a class="primary" href="resume.pdf" download>Download Resume</a>
+    <a class="outline" onclick="showPanel('projects')">View Projects</a>
   </div>
 </section>
 
 <!-- ABOUT -->
 <section id="about" class="panel content">
   <h2>About Me</h2>
-  <p style="max-width:800px;color:var(--muted);line-height:1.8;">
-I am a recent Master’s graduate in Computer Science with a strong foundation in software development, system analysis, and application security. Through academic projects and hands-on practice, I have gained practical exposure to building, testing, and securing web and API-based applications.
-I am detail-oriented, adaptable, and quick to learn new technologies. I enjoy understanding systems end-to-end, identifying potential issues, and applying structured problem-solving approaches to improve reliability, performance, and security. I am comfortable working both independently and as part of a team in fast-paced environments.
-I am currently seeking an entry-level opportunity in the IT industry where I can apply my skills, continue learning from experienced professionals, and contribute effectively to real-world projects from day one.
+  <p style="max-width:900px;color:var(--text-muted);line-height:1.9;">
+    I am a postgraduate student with a Master of Computer Applications (MCA) from KL University (KLU),
+    where I developed a strong understanding of computer science fundamentals, software development,
+    and system design. During my academic journey, I discovered a strong interest in cybersecurity,
+    particularly in application security.
+    <br><br>
+    I am highly motivated to build a career in the Application Security domain and actively invest my
+    time in learning how real-world vulnerabilities arise, how attackers exploit them, and how secure
+    coding and testing practices can prevent them. I enjoy continuous learning, hands-on practice,
+    and collaborating with others to improve security posture.
   </p>
 </section>
 
 <!-- SKILLS -->
 <section id="skills" class="panel content">
-  <h2>Technical Skills</h2>
+  <h2>Core Skills</h2>
   <div class="grid">
-    <div class="card">Computer Science Fundamentals, OOP, OS, Networks, DBMS</div>
-    <div class="card">HTML, CSS, JavaScript, Python, Java, REST APIs, Git</div>
-    <div class="card">Secure Coding, OWASP Top 10, Web & API Testing</div>
-    <div class="card">Linux, Postman, Docker (Basics), Cloud Fundamentals</div>
+    <div class="card">
+      <strong>Application Security</strong>
+      <ul>
+        <li>OWASP Top 10 (Web & API)</li>
+        <li>Authentication & Authorization Testing</li>
+        <li>Input Validation & Business Logic Testing</li>
+      </ul>
+    </div>
+    <div class="card">
+      <strong>Security Tools</strong>
+      <ul>
+        <li>Burp Suite, OWASP ZAP</li>
+        <li>Postman, SQLmap, Nmap</li>
+      </ul>
+    </div>
+    <div class="card">
+      <strong>Programming & Tech</strong>
+      <ul>
+        <li>Python, JavaScript (Basics)</li>
+        <li>Git</li>
+      </ul>
+    </div>
+    <div class="card">
+      <strong>Foundations</strong>
+      <ul>
+        <li>Computer Networks & OS</li>
+        <li>Secure SDLC Awareness</li>
+      </ul>
+    </div>
   </div>
 </section>
 
-<!-- EXPERIENCE -->
-<section id="experience" class="panel content">
-  <h2>Experience</h2>
-  <div class="card">
-    <strong>Cyber Security / IT Intern – CCL Products (India) Ltd.</strong>
-    <ul style="margin-top:1rem;">
-      <li>Assisted in web application and internal system security testing under the guidance of senior team members.</li>
-      <li>Performed basic vulnerability assessment and security validation focusing on authentication, input validation, and configuration issues.</li>
-      <li>Supported testing of web and API-based applications using industry-standard tools and documented findings clearly.</li>
-      <li>Helped track identified issues and supported remediation verification as part of vulnerability management activities.</li>
-      <li>Collaborated with IT and security teams to understand enterprise systems, testing workflows, and secure operational practices.</li>
-    </ul>
+<!-- LABS -->
+<section id="labs" class="panel content">
+  <h2>Hands-On Practice</h2>
+  <div class="grid">
+    <div class="card">
+      <strong>Web Security Labs</strong>
+      <p style="color:var(--text-muted);line-height:1.7;">
+        Practicing structured labs to understand how common web vulnerabilities work,
+        focusing on methodology, exploitation flow, and remediation rather than quantity.
+      </p>
+      <ul>
+        <li>SQL Injection & XSS fundamentals</li>
+        <li>Authentication logic issues</li>
+        <li>Access control weaknesses</li>
+      </ul>
+    </div>
+    <div class="card">
+      <strong>Bug Bounty Learning</strong>
+      <p style="color:var(--text-muted);line-height:1.7;">
+        Exploring bug bounty programs to understand real-world attack surfaces,
+        report quality, and responsible disclosure workflows.
+      </p>
+      <ul>
+        <li>Reconnaissance & parameter analysis</li>
+        <li>Learning from public vulnerability reports</li>
+      </ul>
+    </div>
+    <div class="card">
+      <strong>Self Practice</strong>
+      <ul>
+        <li>Testing intentionally vulnerable applications</li>
+        <li>Using Burp Repeater & manual testing</li>
+        <li>Analyzing root cause & mitigation</li>
+      </ul>
+    </div>
   </div>
 </section>
 
@@ -236,134 +350,46 @@ I am currently seeking an entry-level opportunity in the IT industry where I can
 <section id="projects" class="panel content">
   <h2>Projects</h2>
   <div class="grid">
-
-    <div class="card clickable" onclick="showPanel('project-vapt')">
-      <strong>Web Application Security Assessment (VAPT)</strong>
-      <p style="margin-top:0.8rem;color:var(--muted);">
-        End-to-end vulnerability assessment and penetration testing.
-      </p>
+    <div class="card clickable" onclick="openProject('vapt')">
+      <strong>Web Application Security Assessment</strong>
+      <p style="color:var(--text-muted);margin-top:0.6rem;">End-to-end VAPT learning project</p>
     </div>
-
-    <div class="card clickable" onclick="showPanel('project-secure-app')">
-      <strong>Secure Web Application Development</strong>
-      <p style="margin-top:0.8rem;color:var(--muted);">
-        Secure application with authentication and role-based access control.
-      </p>
+    <div class="card clickable" onclick="openProject('secure')">
+      <strong>Secure Web Application</strong>
+      <p style="color:var(--text-muted);margin-top:0.6rem;">Secure authentication & access control</p>
     </div>
-
-    <div class="card">
-      System & Application Assessment
-    </div>
-
   </div>
 </section>
 
-<!-- PROJECT 1 DETAILS -->
-<section id="project-vapt" class="panel content">
-  <h2>Web Application Security Assessment (VAPT)</h2>
-
-  <p style="color:var(--muted);max-width:900px;line-height:1.8;">
-    Performed a comprehensive Vulnerability Assessment and Penetration Testing (VAPT)
-    on a web application to identify security weaknesses across authentication,
-    authorization, input validation, and business logic.
-  </p>
-
-  <div class="section">
-    <h3>Features</h3>
-    <ul>
-      <li>Manual and automated security testing</li>
-      <li>OWASP Top 10 coverage</li>
-      <li>Real-world attack simulation</li>
-    </ul>
+<!-- MODAL -->
+<div id="project-modal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">×</span>
+    <div id="project-details"></div>
   </div>
-
-  <div class="section">
-    <h3>🛠 Tools & Technologies</h3>
-    <ul>
-      <li>Burp Suite, OWASP ZAP</li>
-      <li>Nmap, SQLMap</li>
-      <li>Kali Linux</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>🔐 Security Measures Implemented</h3>
-    <ul>
-      <li>Input validation and sanitization</li>
-      <li>Authentication and access control testing</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>📊 Outcome / Impact</h3>
-    <ul>
-      <li>Identified high and medium-risk vulnerabilities</li>
-      <li>Provided remediation guidance and PoCs</li>
-      <li>Improved overall security posture</li>
-    </ul>
-  </div>
-
-  <br/>
-  <a onclick="showPanel('projects')" class="outline">← Back to Projects</a>
-</section>
-
-<!-- PROJECT 3 DETAILS -->
-<section id="project-secure-app" class="panel content">
-  <h2>Secure Web Application Development</h2>
-
-  <p style="color:var(--muted);max-width:900px;line-height:1.8;">
-    Designed and developed a secure web application following secure SDLC practices,
-    focusing on authentication, authorization, and common web attack prevention.
-  </p>
-
-  <div class="section">
-    <h3>Features</h3>
-    <ul>
-      <li>User authentication & authorization</li>
-      <li>Role-Based Access Control (RBAC)</li>
-      <li>Secure session handling</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>🛠 Tools & Technologies</h3>
-    <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>Python / Java</li>
-      <li>SQL, Git</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>🔐 Security Measures Implemented</h3>
-    <ul>
-      <li>Password hashing</li>
-      <li>Input validation & output encoding</li>
-      <li>XSS & SQL Injection prevention</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h3>📊 Outcome / Impact</h3>
-    <ul>
-      <li>Reduced common web vulnerabilities</li>
-      <li>Improved application reliability</li>
-      <li>Demonstrated secure coding practices</li>
-    </ul>
-  </div>
-
-  <br/>
-  <a onclick="showPanel('projects')" class="outline">← Back to Projects</a>
-</section>
+</div>
 
 <!-- CONTACT -->
 <section id="contact" class="panel content">
   <h2>Contact</h2>
-  <p style="color:var(--muted);">
-    Email: suresh613d@gmail.com<br/>
-    LinkedIn: www.linkedin.com/in/suresh6303 |
-    GitHub: github.com/D-suresh
-  </p>
+  <div class="grid">
+    <div class="card">
+      <strong>Email</strong>
+      <p>suresh613d@gmail.com</p>
+    </div>
+    <div class="card">
+      <strong>LinkedIn</strong>
+      <p>linkedin.com/in/suresh6303</p>
+    </div>
+    <div class="card">
+      <strong>GitHub</strong>
+      <p>github.com/D-suresh</p>
+    </div>
+    <div class="card">
+      <strong>Availability</strong>
+      <p>Open to Application Security Intern & Entry-Level Roles</p>
+    </div>
+  </div>
 </section>
 
 </div>
@@ -372,14 +398,46 @@ I am currently seeking an entry-level opportunity in the IT industry where I can
 function showPanel(id) {
   document.querySelectorAll('.panel').forEach(p => p.classList.remove('active'));
   document.getElementById(id).classList.add('active');
+}
 
-  document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
-  const links = document.querySelectorAll('nav a');
-  links.forEach(link => {
-    if (link.textContent.toLowerCase() === id.split('-')[0]) {
-      link.classList.add('active');
-    }
-  });
+function openProject(name) {
+  const modal = document.getElementById('project-modal');
+  const box = document.getElementById('project-details');
+  modal.style.display = 'flex';
+
+  if (name === 'vapt') {
+    box.innerHTML = `
+      <h2>Web Application Security Assessment</h2>
+      <p style="color:var(--text-muted);line-height:1.8;">A learning-focused project simulating a real-world application security assessment to understand testing methodology, vulnerability identification, and remediation guidance.</p>
+      <h3>Focus Areas</h3>
+      <ul>
+        <li>Authentication & session handling</li>
+        <li>Input validation & access control</li>
+        <li>OWASP Top 10 aligned testing</li>
+      </ul>
+      <h3>Outcome</h3>
+      <p>Improved understanding of how security flaws are identified, validated, and communicated in professional assessments.</p>
+    `;
+  }
+
+  if (name === 'secure') {
+    box.innerHTML = `
+      <h2>Secure Web Application</h2>
+      <p style="color:var(--text-muted);line-height:1.8;">A development-focused project emphasizing secure coding practices and defensive design.</p>
+      <h3>Key Implementations</h3>
+      <ul>
+        <li>Secure authentication flows</li>
+        <li>Role-based access control</li>
+        <li>Basic attack prevention mechanisms</li>
+      </ul>
+      <h3>Outcome</h3>
+      <p>Strengthened understanding of how secure development reduces application risk.</p>
+    `;
+  }
+}
+
+function closeModal() {
+  document.getElementById('project-modal').style.display = 'none';
 }
 </script>
 
